--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
   "license": "MIT",
   "dependencies": {
     "canvas": "^2.11.2",
+    "cli-table": "^0.3.11",
     "gif-encoder-2": "^1.0.5",
+    "lodash": "^4.17.21",
     "sha1": "^1.1.1"
   }
 }
